--- a/doc/src/users-guide/ch-mobility.tex
+++ b/doc/src/users-guide/ch-mobility.tex
@@ -368,7 +368,7 @@ Parameters of the module:
 \end{itemize}
 
 \begin{note}
-The \nedtype{ANSimMobility} module process only the \ttt{position\_{}change}
+The \nedtype{AnsimMobility} module process only the \ttt{position\_{}change}
 elements and it ignores the \ttt{start\_{}time} attribute. It starts the move
 on the next segment immediately.
 \end{note}
