--- a/doc/src/users-guide/ch-physicallayer.tex
+++ b/doc/src/users-guide/ch-physicallayer.tex
@@ -453,8 +453,8 @@ provides some examples:
   \item \nedtype{NakagamiFading}
   \item \nedtype{RayleighFading}
   \item \nedtype{RicianFading}
-  \item \nedtype{SUIPathLoss}
-  \item \nedtype{UWBIRStochasticPathLoss}
+  \item \nedtype{SuiPathLoss}
+  \item \nedtype{UwbIrStochasticPathLoss}
   \item etc.
 \end{itemize}
 
