--- a/doc/src/users-guide/ch-networks.tex
+++ b/doc/src/users-guide/ch-networks.tex
@@ -106,7 +106,7 @@ to model other aspects. Some of them are:
 
 TODO revise and extend list
 
-\section{Network Examples}
+\section{Typical Networks}
 
 \subsection{Wired Networks}
 
@@ -191,6 +191,7 @@ standard output.
 \subsection{Mixed Networks}
 
 %TODO: wired + wireless
+
 
 
 \section{Frequent Tasks (How To...)}
